# pypi-browser

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
pypi_browser/: app.py  packaging.py  pypi.py
pypi_browser/static/: site.css
pypi_browser/templates/: _base.html  _macros.html  home.html  package.html  package_file.html  package_file_archive_path.html
pypi_view/: app.py  packaging.py  pypi.py
pypi_view/static/: site.css  site.js
pypi_view/templates/: _base.html  _macros.html  base.html  home.html  package.html  package_file.html  package_file_archive_path.html  package_file_archive_path_cannot_render.html
tests/: app_test.py
