[tool.poetry]
name = "pypi-browser-webapp"
version = "0.0.3"
description = "PyPI package browsing web application"
authors = ["Chris Kuehl <ckuehl@ckuehl.me>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "pypi_browser"}]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "*"
fluffy-code = "^0.0.2"
Jinja2 = "^3.1.2"
httpx = "^0.23.0"
aiofiles = "^22.1.0"
identify = "^2.5.5"
Pygments = "^2.13.0"
MarkupSafe = "^2.1.1"
packaging = "^21.3"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.18.3"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
mypy = "^0.971"
coverage = "^6.4.4"
types-aiofiles = "^22.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
